--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
   <string name="password_hint">请输入您的密码</string>
   <string name="login">登陆</string>
   <string name="sign_in">注册</string>
+  <string name="today_income">今日账号收入(元)</string>
 </resources>
